# embedded-systems-toolkit

./: LICENSE  README.md
.metadata/: version.ini
001_Hello_world/: .cproject  002_Operational_modes.launch  003.launch  005.launch
002_Operational_modes/: .project
002_Operational_modes/Src/: main.c
003_Access_level/: .project
004_Fault_gen/: .cproject
004_Fault_gen/Src/: main.c
005_Task_schedular/: 001.launch
005_Task_schedular/Src/: main.c
006_Debuging/: 006_Debuging.launch
006_Debuging/Src/: main.c
006_baremetal_embedded_c/: main.h  main_log  stm32_startup.c
008_UART_HAL/: 008_UART_HAL.ioc
01-embedded-c-fundamentals/: 002_student_management.c  Book_lib.c
01-embedded-c-fundamentals/001_Function/: 001_greet  002_swap_pass_by_value  002_swap_pass_by_value.c  004_swap_pass_by_ref
01-embedded-c-fundamentals/002_Array/: 001  001.c  002_sum  003_max.c  004_second_largest  005_reversecopy
01-embedded-c-fundamentals/004_struct/: 001.c  002
01-embedded-c-fundamentals/basics/: 001.c  001_main.c  002_file  005  (+16 more)
010_HSE_CLK_8M/: 010_HSE_CLK_8M.launch
011_PLL_SYSCLK/: 011_PLL_SYSCLK.launch
014_TIM6_100ms_IT/: .project
015_CAN_LoopBack_Mode/: 015_CAN_LoopBack_Mode.launch
016_Sleep_ON_exit_TIM6_100ms_IT2/: .cproject
017_RTC_Date_Time/: .project
018_GPIO_HAL_DMA/: .project  018_GPIO_HAL_DMA.launch
019_GPIO_HAL_DMA_IT/: .project
esp32/: README.md
esp32/007_Queue_freeRTOS/main/: CMakeLists.txt  led_effect.c  main.c  main.h  task_handler.c  user_interaction.c
stm32/: README.md
stm32f4xx_drivers/: .cproject  stm32f4xx_drivers.launch
(+404 files in other folders)
